--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security"
   }
 }
 </script>
