Enhance customer management and add payment audit
Implemented virtual scrolling and improved import functionality in CustomerManager. Added PaymentAudit component and route. Updated Navbar to support logo and new audit navigation. Various UI and logic improvements across components for better performance and usability.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0",
     "date-fns/": "https://aistudiocdn.com/date-fns@^4.1.0/",
-    "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0"
+    "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
+    "jspdf": "https://esm.sh/jspdf@2.5.1",
+    "qrcode": "https://esm.sh/qrcode@1.5.3",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174"
   }
 }
 </script>
