--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     
     <!-- THAY ĐỔI LINK ẢNH Ở DƯỚI ĐÂY ĐỂ CẬP NHẬT ICON -->
     <!-- 1. Startup Image (Màn hình chờ khi mở app trên iOS) -->
-    <link rel="apple-touch-startup-image" href="https://cdn-icons-png.flaticon.com/512/2769/2769104.png">
+    <link rel="apple-touch-startup-image" href="https://i.postimg.cc/g0fwknrF/iconsshop.png">
     <!-- 2. Home Screen Icon (Icon trên màn hình chính iOS) -->
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2769/2769104.png">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/g0fwknrF/iconsshop.png">
     <!-- 3. Favicon (Icon trên tab trình duyệt PC) -->
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2769/2769104.png">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/g0fwknrF/iconsshop.png">
     
     <title>EcoGo Logistics</title>
     <link rel="manifest" href="/manifest.json">
