--- a/index.html
+++ b/index.html
@@ -1,24 +1,3 @@
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.10.1",
-    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0",
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-    "date-fns/": "https://aistudiocdn.com/date-fns@^4.1.0/",
-    "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://aistudiocdn.com/vite@^7.2.7",
-    "qrcode": "https://aistudiocdn.com/qrcode@^1.5.4",
-    "jspdf": "https://aistudiocdn.com/jspdf@^3.0.4",
-    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.449"
-  }
-}
-</script>
 <!DOCTYPE html>
 <html lang="vi">
   <head>
@@ -46,6 +25,28 @@
     
     <title>EcoGo Logistics</title>
     <link rel="manifest" href="/manifest.json">
+
+    <script type="importmap">
+    {
+      "imports": {
+        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+        "react/": "https://aistudiocdn.com/react@^19.2.1/",
+        "react": "https://aistudiocdn.com/react@^19.2.1",
+        "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.10.1",
+        "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0",
+        "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
+        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0",
+        "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
+        "date-fns/": "https://aistudiocdn.com/date-fns@^4.1.0/",
+        "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
+        "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
+        "vite": "https://aistudiocdn.com/vite@^7.2.7",
+        "qrcode": "https://aistudiocdn.com/qrcode@^1.5.4",
+        "jspdf": "https://aistudiocdn.com/jspdf@^3.0.4",
+        "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.449"
+      }
+    }
+    </script>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -79,12 +80,10 @@
       }
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-<script type="importmap">
-{
-  "imports": {
-    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "<link rel="stylesheet" href="/index.css">
-<script type="module" src="/index.tsx"></script>
+  <link rel="stylesheet" href="/index.css">
+</head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
+  </body>
+</html>
